--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
     /* linhas padrão: label | campo (para % e frete) */
     .row { display: grid; grid-template-columns: 1fr 70px; gap: 10px; align-items: center; margin: 8px 0; }
 
-    /* nova linha dos produtos: label | preço | qtd (tudo na mesma linha) */
-    .row3 { display: grid; grid-template-columns: 1fr 100px 70px; gap: 10px; align-items: center; margin: 8px 0; }
-    label { font-weight: 600; font-size: var(--label-size); white-space: nowrap; } /* evita quebrar PRODUTO 1 e QTD */
+    /* linha dos produtos: label | preço | "QTD" | campo qtd */
+    .row3{
+      display: grid;
+      grid-template-columns: 1fr 100px 40px 70px; /* ajuste se quiser */
+      gap: 6px; /* aproxima os campos do label */
+      align-items: center;
+      margin: 8px 0;
+    }
+
+    label { font-weight: 600; font-size: var(--label-size); white-space: nowrap; }
+    .qtd-label{ white-space: nowrap; text-align: center; font-weight: 600; }
+
     input[type="number"], input[type="text"] {
       padding: var(--input-pad);
       border-radius: 10px;
@@ -41,8 +50,9 @@
     .result { font-weight: 700; font-size: 1.15rem; }
     .warn { color: #b45d00; }
     .toggle { display:flex; align-items:center; gap:8px; }
+
     @media (max-width: 360px){
-      .row3 { grid-template-columns: 1fr 90px 64px; } /* aperta um pouco nos iPhones menores */
+      .row3 { grid-template-columns: 1fr 90px 36px 64px; }
     }
   </style>
 </head>
@@ -84,14 +94,15 @@
     const itemInputs = [];
     itemsDiv.innerHTML = '';
 
-    // UMA LINHA POR PRODUTO: label | preço | QTD
+    // UMA LINHA POR PRODUTO: label | preço | "QTD" | campo qtd
     for (let i=1; i<=6; i++) {
       const wrap = document.createElement('div');
       wrap.className = 'row3';
       wrap.innerHTML = `
         <label>PRODUTO ${i}</label>
         <input class="money" type="number" inputmode="decimal" step="0.01" id="b${i}" placeholder="0,00">
-        <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*" step="1" id="c${i}" value="1" aria-label="QTD">
+        <span class="qtd-label">QTD</span>
+        <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*" step="1" id="c${i}" value="1" aria-label="Quantidade do produto ${i}">
       `;
       itemsDiv.appendChild(wrap);
       itemInputs.push('b'+i, 'c'+i);
