--- a/index.html
+++ b/index.html
@@ -223,27 +223,27 @@
 
   <div class="card">
     <div class="rowpct">
-      <label class="compact-label">MARGEM LUCRO</label>
+      <label class="compact-label">MARGEM LUCRO (%)</label>
       <input type="number" inputmode="decimal" step="0.01" id="b8" placeholder="%">
       <div id="r_b8" class="result-right">R$ 0,00</div>
     </div>
     <div class="rowpct">
-      <label class="compact-label">CUSTO FIXO / FRETE</label>
+      <label class="compact-label">CUSTO FIXO / FRETE (R$)</label>
       <input type="number" inputmode="decimal" step="0.01" id="b9" placeholder="R$">
       <div></div>
     </div>
     <div class="rowpct">
-      <label class="compact-label">IMPOSTO</label>
+      <label class="compact-label">IMPOSTO (%)</label>
       <input type="number" inputmode="decimal" step="0.01" id="b10" placeholder="%">
       <div id="r_b10" class="result-right">R$ 0,00</div>
     </div>
     <div class="rowpct">
-      <label class="compact-label">FIXO</label>
+      <label class="compact-label">TAXA EXTRA (%)</label>
       <input type="number" inputmode="decimal" step="0.01" id="b11" placeholder="%">
       <div id="r_b11" class="result-right">R$ 0,00</div>
     </div>
     <div class="rowpct">
-      <label class="compact-label">COMISSÃO</label>
+      <label class="compact-label">COMISSÃO (%)</label>
       <input type="number" inputmode="decimal" step="0.01" id="b12" placeholder="%">
       <div id="r_b12" class="result-right">R$ 0,00</div>
     </div>
